// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GorgiasChatIntegrationCampaigns/> render() should display infobox to admin 1`] = `
[
  [
    Immutable.Map {
      "id": 118,
      "type": "gorgias_chat",
      "name": "My new chat 3",
      "meta": Immutable.Map {
        "campaigns": Immutable.List [],
      },
    },
    {
      "generate_revenue_campaigns": true,
    },
  ],
]
`;

exports[`<GorgiasChatIntegrationCampaigns/> render() should display the delete buttons correctly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/channels/gorgias_chat"
            >
              Chat
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            My new chat
          </li>
        </ol>
      </nav>
      <div>
        <div
          class="automationSubscriptionButton"
        >
          <div
            class="d-flex align-items-center upgradeLink"
          >
            <a
              to="[object Object]"
            >
              <button
                aria-disabled="false"
                class="wrapper ghost primary medium"
                type="button"
              >
                <span
                  class="wrapper"
                >
                  <i
                    class="material-icons icon isLeft medium"
                  >
                    auto_awesome
                  </i>
                  Upgrade
                </span>
              </button>
            </a>
          </div>
        </div>
        <a
          class="createCampaignLink"
          to="/app/settings/channels/gorgias_chat/118/campaigns/new"
        >
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="button"
          >
            Create Campaign
          </button>
        </a>
      </div>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        class="link"
        data-active-class-name="active"
        href="/app/settings/channels/gorgias_chat/118/campaigns"
      >
        Campaigns
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/quick_replies"
      >
        Quick replies
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/appearance"
      >
        Appearance
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/preferences"
      >
        Preferences
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/installation"
      >
        Installation
      </a>
    </nav>
    <div
      class="pageContainer container-fluid"
    >
      <span>
        Use campaigns to prompt visitors of your website to start chatting with your team.
      </span>
    </div>
    <table
      class="table table-integrations mt-3 campaignsTable"
    >
      <thead
        class=""
      >
        <tr
          class="headerRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                />
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_drop_up
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                >
                  Campaign name
                </span>
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_drop_up
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                />
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_drop_up
                </i>
              </div>
            </div>
          </td>
        </tr>
      </thead>
      <tbody
        class="tableBody"
      >
        <tr
          class="row tableRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="cellContent"
            >
              <div>
                <label
                  aria-checked="true"
                  aria-label="Enable campaign Super campaign"
                  class="label label"
                  for="toggle-button-9"
                  role="switch"
                >
                  <input
                    aria-label="Enable campaign Super campaign"
                    checked=""
                    class="input"
                    disabled=""
                    id="toggle-button-9"
                    name="toggle-button-9"
                    type="checkbox"
                  />
                  <div
                    class="slider"
                  />
                </label>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent anchorCell"
            >
              <a
                class="anchor"
                to="/app/settings/channels/gorgias_chat/118/campaigns/156a4d-fg68h40-sd6f4"
              >
                <div>
                  <b>
                    Super campaign
                  </b>
                </div>
              </a>
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="cellContent"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost secondary medium"
                data-testid="duplicate-icon-button"
                title="Duplicate campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  file_copy
                </i>
              </button>
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost destructive medium"
                data-testid="delete-icon-button"
                id="delete-campaign-156a4d-fg68h40-sd6f4"
                title="Delete campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="row tableRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="cellContent"
            >
              <div>
                <label
                  aria-checked="false"
                  aria-label="Enable campaign Not so good campaign"
                  class="label label"
                  for="toggle-button-11"
                  role="switch"
                >
                  <input
                    aria-label="Enable campaign Not so good campaign"
                    class="input"
                    disabled=""
                    id="toggle-button-11"
                    name="toggle-button-11"
                    type="checkbox"
                  />
                  <div
                    class="slider"
                  />
                </label>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent anchorCell"
            >
              <a
                class="anchor"
                to="/app/settings/channels/gorgias_chat/118/campaigns/not-so-good-campaign-d8f9-fds486-sf78"
              >
                <div>
                  <b>
                    Not so good campaign
                  </b>
                </div>
              </a>
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="cellContent"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost secondary medium"
                data-testid="duplicate-icon-button"
                title="Duplicate campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  file_copy
                </i>
              </button>
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost destructive medium"
                data-testid="delete-icon-button"
                id="delete-campaign-not-so-good-campaign-d8f9-fds486-sf78"
                title="Delete campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="pagination"
    >
      <ul
        class="container"
      >
        <li
          aria-label="previous"
          class="item arrow disabled"
        >
          <i
            class="material-icons md-2"
          >
            keyboard_arrow_left
          </i>
        </li>
        <li
          aria-current="true"
          aria-label="page-1"
          class="item selected"
        >
          1
        </li>
        <li
          aria-label="next"
          class="item arrow disabled"
        >
          <i
            class="material-icons md-2"
          >
            keyboard_arrow_right
          </i>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<GorgiasChatIntegrationCampaigns/> render() should display the duplicate buttons correctly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/channels/gorgias_chat"
            >
              Chat
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            My new chat
          </li>
        </ol>
      </nav>
      <div>
        <div
          class="automationSubscriptionButton"
        >
          <div
            class="d-flex align-items-center upgradeLink"
          >
            <a
              to="[object Object]"
            >
              <button
                aria-disabled="false"
                class="wrapper ghost primary medium"
                type="button"
              >
                <span
                  class="wrapper"
                >
                  <i
                    class="material-icons icon isLeft medium"
                  >
                    auto_awesome
                  </i>
                  Upgrade
                </span>
              </button>
            </a>
          </div>
        </div>
        <a
          class="createCampaignLink"
          to="/app/settings/channels/gorgias_chat/118/campaigns/new"
        >
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="button"
          >
            Create Campaign
          </button>
        </a>
      </div>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        class="link"
        data-active-class-name="active"
        href="/app/settings/channels/gorgias_chat/118/campaigns"
      >
        Campaigns
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/quick_replies"
      >
        Quick replies
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/appearance"
      >
        Appearance
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/preferences"
      >
        Preferences
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/installation"
      >
        Installation
      </a>
    </nav>
    <div
      class="pageContainer container-fluid"
    >
      <span>
        Use campaigns to prompt visitors of your website to start chatting with your team.
      </span>
    </div>
    <table
      class="table table-integrations mt-3 campaignsTable"
    >
      <thead
        class=""
      >
        <tr
          class="headerRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                />
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_drop_up
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                >
                  Campaign name
                </span>
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_drop_up
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                />
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_drop_up
                </i>
              </div>
            </div>
          </td>
        </tr>
      </thead>
      <tbody
        class="tableBody"
      >
        <tr
          class="row tableRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="cellContent"
            >
              <div>
                <label
                  aria-checked="true"
                  aria-label="Enable campaign Super campaign"
                  class="label label"
                  for="toggle-button-5"
                  role="switch"
                >
                  <input
                    aria-label="Enable campaign Super campaign"
                    checked=""
                    class="input"
                    disabled=""
                    id="toggle-button-5"
                    name="toggle-button-5"
                    type="checkbox"
                  />
                  <div
                    class="slider"
                  />
                </label>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent anchorCell"
            >
              <a
                class="anchor"
                to="/app/settings/channels/gorgias_chat/118/campaigns/156a4d-fg68h40-sd6f4"
              >
                <div>
                  <b>
                    Super campaign
                  </b>
                </div>
              </a>
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="cellContent"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost secondary medium"
                data-testid="duplicate-icon-button"
                title="Duplicate campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  file_copy
                </i>
              </button>
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost destructive medium"
                data-testid="delete-icon-button"
                id="delete-campaign-156a4d-fg68h40-sd6f4"
                title="Delete campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="row tableRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="cellContent"
            >
              <div>
                <label
                  aria-checked="false"
                  aria-label="Enable campaign Not so good campaign"
                  class="label label"
                  for="toggle-button-7"
                  role="switch"
                >
                  <input
                    aria-label="Enable campaign Not so good campaign"
                    class="input"
                    disabled=""
                    id="toggle-button-7"
                    name="toggle-button-7"
                    type="checkbox"
                  />
                  <div
                    class="slider"
                  />
                </label>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent anchorCell"
            >
              <a
                class="anchor"
                to="/app/settings/channels/gorgias_chat/118/campaigns/not-so-good-campaign-d8f9-fds486-sf78"
              >
                <div>
                  <b>
                    Not so good campaign
                  </b>
                </div>
              </a>
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="cellContent"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost secondary medium"
                data-testid="duplicate-icon-button"
                title="Duplicate campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  file_copy
                </i>
              </button>
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost destructive medium"
                data-testid="delete-icon-button"
                id="delete-campaign-not-so-good-campaign-d8f9-fds486-sf78"
                title="Delete campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="pagination"
    >
      <ul
        class="container"
      >
        <li
          aria-label="previous"
          class="item arrow disabled"
        >
          <i
            class="material-icons md-2"
          >
            keyboard_arrow_left
          </i>
        </li>
        <li
          aria-current="true"
          aria-label="page-1"
          class="item selected"
        >
          1
        </li>
        <li
          aria-label="next"
          class="item arrow disabled"
        >
          <i
            class="material-icons md-2"
          >
            keyboard_arrow_right
          </i>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<GorgiasChatIntegrationCampaigns/> render() should display the empty state correctly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/channels/gorgias_chat"
            >
              Chat
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            My new chat
          </li>
        </ol>
      </nav>
      <div>
        <div
          class="automationSubscriptionButton"
        >
          <div
            class="d-flex align-items-center upgradeLink"
          >
            <a
              to="[object Object]"
            >
              <button
                aria-disabled="false"
                class="wrapper ghost primary medium"
                type="button"
              >
                <span
                  class="wrapper"
                >
                  <i
                    class="material-icons icon isLeft medium"
                  >
                    auto_awesome
                  </i>
                  Upgrade
                </span>
              </button>
            </a>
          </div>
        </div>
        <a
          class="createCampaignLink"
          to="/app/settings/channels/gorgias_chat/118/campaigns/new"
        >
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="button"
          >
            Create Campaign
          </button>
        </a>
      </div>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        class="link"
        data-active-class-name="active"
        href="/app/settings/channels/gorgias_chat/118/campaigns"
      >
        Campaigns
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/quick_replies"
      >
        Quick replies
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/appearance"
      >
        Appearance
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/preferences"
      >
        Preferences
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/installation"
      >
        Installation
      </a>
    </nav>
    <div
      class="pageContainer container-fluid"
    >
      <span>
        Use campaigns to prompt visitors of your website to start chatting with your team.
      </span>
      <div>
        This integration doesn't have any campaigns yet.
      </div>
    </div>
  </div>
</div>
`;

exports[`<GorgiasChatIntegrationCampaigns/> render() should display the list correctly 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/channels/gorgias_chat"
            >
              Chat
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            My new chat
          </li>
        </ol>
      </nav>
      <div>
        <div
          class="automationSubscriptionButton"
        >
          <div
            class="d-flex align-items-center upgradeLink"
          >
            <a
              to="[object Object]"
            >
              <button
                aria-disabled="false"
                class="wrapper ghost primary medium"
                type="button"
              >
                <span
                  class="wrapper"
                >
                  <i
                    class="material-icons icon isLeft medium"
                  >
                    auto_awesome
                  </i>
                  Upgrade
                </span>
              </button>
            </a>
          </div>
        </div>
        <a
          class="createCampaignLink"
          to="/app/settings/channels/gorgias_chat/118/campaigns/new"
        >
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="button"
          >
            Create Campaign
          </button>
        </a>
      </div>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        class="link"
        data-active-class-name="active"
        href="/app/settings/channels/gorgias_chat/118/campaigns"
      >
        Campaigns
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/quick_replies"
      >
        Quick replies
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/appearance"
      >
        Appearance
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/preferences"
      >
        Preferences
      </a>
      <a
        class="link"
        data-active-class-name="active"
        data-exact="true"
        href="/app/settings/channels/gorgias_chat/118/installation"
      >
        Installation
      </a>
    </nav>
    <div
      class="pageContainer container-fluid"
    >
      <span>
        Use campaigns to prompt visitors of your website to start chatting with your team.
      </span>
    </div>
    <table
      class="table table-integrations mt-3 campaignsTable"
    >
      <thead
        class=""
      >
        <tr
          class="headerRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                />
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_drop_up
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                >
                  Campaign name
                </span>
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_drop_up
                </i>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="content"
            >
              <div
                class="cell"
              >
                <span
                  class="title"
                />
                <i
                  class="material-icons md-1 directionIcon"
                >
                  arrow_drop_up
                </i>
              </div>
            </div>
          </td>
        </tr>
      </thead>
      <tbody
        class="tableBody"
      >
        <tr
          class="row tableRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="cellContent"
            >
              <div>
                <label
                  aria-checked="true"
                  aria-label="Enable campaign Super campaign"
                  class="label label"
                  for="toggle-button-1"
                  role="switch"
                >
                  <input
                    aria-label="Enable campaign Super campaign"
                    checked=""
                    class="input"
                    disabled=""
                    id="toggle-button-1"
                    name="toggle-button-1"
                    type="checkbox"
                  />
                  <div
                    class="slider"
                  />
                </label>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent anchorCell"
            >
              <a
                class="anchor"
                to="/app/settings/channels/gorgias_chat/118/campaigns/156a4d-fg68h40-sd6f4"
              >
                <div>
                  <b>
                    Super campaign
                  </b>
                </div>
              </a>
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="cellContent"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost secondary medium"
                data-testid="duplicate-icon-button"
                title="Duplicate campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  file_copy
                </i>
              </button>
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost destructive medium"
                data-testid="delete-icon-button"
                id="delete-campaign-156a4d-fg68h40-sd6f4"
                title="Delete campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class="row tableRow"
        >
          <td
            class="wrapper normal"
            style="width: 88px;"
          >
            <div
              class="cellContent"
            >
              <div>
                <label
                  aria-checked="false"
                  aria-label="Enable campaign Not so good campaign"
                  class="label label"
                  for="toggle-button-3"
                  role="switch"
                >
                  <input
                    aria-label="Enable campaign Not so good campaign"
                    class="input"
                    disabled=""
                    id="toggle-button-3"
                    name="toggle-button-3"
                    type="checkbox"
                  />
                  <div
                    class="slider"
                  />
                </label>
              </div>
            </div>
          </td>
          <td
            class="wrapper normal"
          >
            <div
              class="cellContent anchorCell"
            >
              <a
                class="anchor"
                to="/app/settings/channels/gorgias_chat/118/campaigns/not-so-good-campaign-d8f9-fds486-sf78"
              >
                <div>
                  <b>
                    Not so good campaign
                  </b>
                </div>
              </a>
            </div>
          </td>
          <td
            class="wrapper normal"
            style="width: 110px;"
          >
            <div
              class="cellContent"
            >
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost secondary medium"
                data-testid="duplicate-icon-button"
                title="Duplicate campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  file_copy
                </i>
              </button>
              <button
                aria-disabled="false"
                class="wrapper mr-1 wrapper ghost ghost destructive medium"
                data-testid="delete-icon-button"
                id="delete-campaign-not-so-good-campaign-d8f9-fds486-sf78"
                title="Delete campaign"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  delete
                </i>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="pagination"
    >
      <ul
        class="container"
      >
        <li
          aria-label="previous"
          class="item arrow disabled"
        >
          <i
            class="material-icons md-2"
          >
            keyboard_arrow_left
          </i>
        </li>
        <li
          aria-current="true"
          aria-label="page-1"
          class="item selected"
        >
          1
        </li>
        <li
          aria-label="next"
          class="item arrow disabled"
        >
          <i
            class="material-icons md-2"
          >
            keyboard_arrow_right
          </i>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
